# BibleStudyAI

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  quick_ingest.py  test_api.py  test_api_fixed.py  test_clean_push.md  test_full_pipeline.py  test_genesis_fixed.py  test_genesis_pipeline.py  test_optimized_pipeline.py  test_search_genesis.py  test_simple_components.py
backend/: Dockerfile  Gemini.md  main.py  main_clean.py  pyproject.toml  requirements.txt
backend/agents/: agent.py  api.py  base_agents.py  db_utils.py  graph_utils.py  models.py  prompts.py  providers.py  tools.py  workflows.py
backend/auth/: security.py
backend/data_ingestion/: chunker.py  embedder.py  graph_builder.py  ingest.py  milvus_ingestion.py  neo4j_ingestion.py  optimized_embedder.py  optimized_pipeline.py
backend/database/: milvus_vector.py  neo4j_graph.py  optimized_milvus.py  redis_cache.py  timescale_db.py
backend/ingestion/: chunker.py  embedder.py  graph_builder.py  ingest.py
backend/models/: api_models.py  data_models.py  db_models.py
backend/prompts/: graph_prompt.py
backend/routers/: auth.py  bible.py  chat.py  notes.py  users.py
backend/services/: ai_integration.py  bible_service.py  deephaven_manager.py  kafka_communication.py  knowledge_graph.py  rag_system.py
backend/tests/: __init__.py  conftest.py
backend/tests/agent/: __init__.py  test_db_utils.py  test_models.py
backend/tests/ingestion/: __init__.py  test_chunker.py
backend/utils/: config.py  logging.py  performance_monitor.py
cleaned_bibles_pipeline/: README.md
(+54 files in other folders)
