[tool.poetry]
name = "koinonia-backend"
version = "0.1.0"
description = "Backend for Koinonia House project"
authors = ["Josh Shay <shayj292@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyarrow = "^15.0.0"
pydeephaven = "^0.34.0"
pandas = "^2.2.1"
pymilvus = "^2.4.1"
neo4j = "^5.26.0"  # Updated to meet graphiti-core requirement
openai = "^1.14.2"
anthropic = "^0.25.0"
graphiti-core = "^0.12.0"  # Updated to latest available version
tqdm = "^4.66.2"
python-dotenv = "^1.0.1"
redis = "^5.0.0"
fastparquet = "^2024.0.0"
kafka-python = "^2.2.14"
aiokafka = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"